--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   open_file: ^3.5.10
   video_player: ^2.9.2
   chewie: ^1.7.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  # hive_generator: ^2.0.1
+  # build_runner: ^2.4.15
   # firebase_core: ^3.11.0
   # firebase_auth: ^5.4.2
   # cloud_firestore: ^5.6.3
@@ -61,6 +65,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
