--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   chewie: ^1.7.4
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  http: ^1.3.0
+  get: ^4.7.2
   # hive_generator: ^2.0.1
   # build_runner: ^2.4.15
   # firebase_core: ^3.11.0
