--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ dependencies:
   hive_flutter: ^1.1.0
   http: ^1.3.0
   get: ^4.7.2
-  # hive_generator: ^2.0.1
+  flutter_webrtc: ^0.12.11
+  socket_io_client: ^3.0.2
+
+ 
   # build_runner: ^2.4.15
   # firebase_core: ^3.11.0
   # firebase_auth: ^5.4.2
